# the-agent-that-got-me-rejected

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  start.command  start.ps1  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: cached_jobs.json
docs/: architecture.md  extending_sources.md  local_first_plan.md  local_setup.md  opik_setup.md
notebooks/: phase1_walkthrough.ipynb
notebooks/phase1/: README.md
reports/: baseline.json  phase1_findings.md
scripts/: check_repository.py  generate_fixture_cvs.py  run_batch.py  snapshot_jobs.py  start.py
src/job_scout/: __init__.py  app.py  applications.py  config.py  graph.py  grounding.py  llm.py  matching.py  privacy.py  profile.py  query_optimizer.py  runner.py  schemas.py  scoring.py  tracing.py
src/job_scout/graph/: __init__.py  graph.py  schemas.py  state.py
src/job_scout/graph/nodes/: fetch_jobs.py  rank_jobs.py  reformulate_query.py
src/job_scout/graph/prompts/: __init__.py  rank_jobs.py  reformulate.py
src/job_scout/nodes/: __init__.py  extract_profile.py  fetch_jobs.py  rank_jobs.py  reformulate_query.py
src/job_scout/prompts/: __init__.py  extract_profile.py  rank_jobs.py  reformulate.py
src/job_scout/tools/: __init__.py  cv_reader.py  jobs_api.py
tests/: conftest.py  test_applications.py  test_cloud_ui.py  test_concurrent_ranking.py  test_cv_reader.py  test_graph.py  test_grounding.py  test_jobs_api.py  test_llm.py  test_nodes.py  test_offline_mode.py  test_privacy.py  test_profile.py  test_query_optimizer.py  test_repository_checks.py  test_runner.py  test_schemas.py  test_scoring.py  test_start_script.py
