[project]
name = "the-agent-that-got-me-rejected"
version = "0.1.0"
description = "A LangGraph job-matching agent with full Opik observability."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "exitLQ" }]

dependencies = [
    "langgraph>=1.1",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "opik>=2.1",
    # 1.92.0 does not publish a Windows wheel and falls back to a Rust build.
    "litellm<1.92",
    "gradio>=5",
    "pypdf>=5",
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "fpdf2>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.8",
    "pre-commit>=4",
    "jupyter>=1.1",
]

[project.optional-dependencies]
# Optional model providers; see README.md and .env.example.
groq = ["langchain-groq>=0.2"]
ollama = ["langchain-ollama>=1.0"]
cloud = [
    "langchain-anthropic>=1.4",
    "langchain-xai>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_scout"]

[tool.ruff]
line-length = 130
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["I", "F", "UP", "E", "W", "B", "SIM", "S"]
ignore = [
    "S101", # assert is fine in this codebase
    "S113", # request timeouts are set explicitly where it matters
    "S603", # subprocess calls in this repo use hardcoded, trusted arguments
]

[tool.ruff.lint.per-file-ignores]
"src/job_scout/graph/prompts/*" = ["E501"]  # prompt constants are long by nature
"tests/*" = ["S", "B"]                 # relax security/bugbear lints in tests
"scripts/*" = ["S"]                    # scripts do IO/network by design
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests that hit real services (deselect with -m 'not integration')",
]

[tool.uv]
# .env.test is loaded by conftest, not uv; kept here for discoverability.
